# BEAD

./: .gitignore  README.md  pyproject.toml  requirements.txt  shell_scripts  shell_scripts1
.github/workflows/: docs.yaml
bead/: __init__.py  __main__.py  bead.py
bead/src/models/: VAE_NF_Conv2D.py  flows.py  layers.py  models.py
bead/src/trainers/: inference.py  training.py
bead/src/utils/: conversion.py  data_processing.py  diagnostics.py  ggl.py  helper.py  loss.py  normalization.py  plotting.py
bead/workspaces/dark/data/h5/: test_sherpa.h5
bead/workspaces/dark/data/h5/tensors/: test_sherpa_constituent_scaler.pkl  test_sherpa_constituents.pt  test_sherpa_events.pt  test_sherpa_jets.pt
bead/workspaces/dark/test/config/: test_config.py
bead/workspaces/dq/checks/config/: checks_config.py
bead/workspaces/dq/checks/output/models/: model.pt
bead/workspaces/dq/checks/output/results/: epoch_loss_data.npy
bead/workspaces/dq/data/csv/: bkg_test_herwig.csv  bkg_test_pythia.csv  bkg_train_pythia.csv
bead/workspaces/dq/data/h5/: bkg_train_herwig.h5
bead/workspaces/dq/data/h5/tensors/: bkg_test_herwig_constituent_scaler.pkl  bkg_test_herwig_events.pt  bkg_test_herwig_jet_scaler.pkl  bkg_test_herwig_jets.pt  bkg_test_pythia_constituent_scaler.pkl  bkg_test_pythia_constituents.pt  bkg_test_pythia_events.pt  bkg_test_pythia_jets.pt  (+14 more)
bead/workspaces/dq/test/config/: test_config.py
bead/workspaces/dq/tester/config/: tester_config.py
bead/workspaces/dqm/data/csv/: bkg_train_herwig.csv  bkg_train_sherpa.csv
bead/workspaces/dqm/data/h5/: bkg_test_herwig.h5  bkg_test_pythia.h5  bkg_train_pythia.h5
bead/workspaces/dqm/test/config/: test_config.py
docs/: Makefile  bead.src.trainers.rst  conf.py  index.rst  modules.rst  reference.rst
docs/_build/doctrees/: bead.doctree  bead.src.doctree  bead.src.models.doctree  bead.src.trainers.doctree  bead.src.utils.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  bead.html  bead.src.html  bead.src.models.html  bead.src.trainers.html  bead.src.utils.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_sources/: bead.rst.txt  bead.src.models.rst.txt  bead.src.rst.txt  bead.src.utils.rst.txt  index.rst.txt  modules.rst.txt
(+72 files in other folders)
