[project]
name = "bead"
version = "0.1.0"
description = ""
authors = [
    {name = "Pratik Jawahar",email = "55033105+PRAkTIKal24@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
