[project]
name = "bead"
version = "0.1.0"
description = "Background Enrichment augmented Anomaly Detection"
authors = [
    {name = "Pratik Jawahar"},
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "scikit-learn (>=1.6.1,<2.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "art (>=6.4,<7.0)",
    "loky (>=3.4.1,<4.0.0)",
    "h5py (>=3.12.1,<4.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "argparse (>=1.4.0,<2.0.0)",
    "importlib (>=1.0.4,<2.0.0)",
    "scipy (>=1.15.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pylint = "^3.3.4"
wrapt = "^1.17.2"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"

