[project]
name = "bead"
version = "0.7.1"
description = "Background Enrichment based Anomaly Detection in HEP data"
authors = [
    {name = "Pratik Jawahar"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn (>=1.6.1,<2.0.0)",
    "numpy (>=1.24.0,<2.2.0)",
    "torch (>=2.6.0,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "art (>=6.4,<7.0)",
    "loky (>=3.4.1,<4.0.0)",
    "h5py (>=3.12.1,<4.0.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "argparse (>=1.4.0,<2.0.0)",
    "dask (>=2025.2.0,<2026.0.0)",
    "numba (>=0.61.0,<0.62.0)"
]


[tool.poetry.scripts]
bead = "bead:main"

[tool.poetry]
# ...
packages = [
    { include = "bead", from = "." },  # Adjust if bead is in a subdirectory
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pylint = "^3.3.4"
wrapt = "^1.17.2"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"

